<resources>
    <string name="app_name">Groww</string>
    <string name="abhimanyu_mishra">Abhimanyu Mishra</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>

    <string name="notification">Notification</string>
    <string name="bank_and_autoplay">Bank and Autoplay</string>
    <string name="account_details">Account Details</string>
    <string name="my_account">My Account</string>
    <string name="reports">Reports</string>
    <string name="sips">Sips</string>
    <string name="all_orders">All Orders</string>
    <string name="my_investment">My Investment</string>
    <string name="add_money">ADD MONEY</string>
    <string name="_0_00">0.00</string>
    <string name="rs">Rs </string>
    <string name="available_to_invest">Available to invest</string>
    <string name="todo">TODO</string>
    <string name="abhimanyumishra130_gmail_com">abhimanyumishra130@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pricing">Pricing</string>
    <string name="about_us">About Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="simple">Simple</string>
    <string name="investing">investing.</string>
    <string name="stocks">Stocks</string>
    <string name="by_procedding_i_agree_to_the">By proceeding, I agree to the </string>
    <string name="t_amp_c">T&amp;C</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_other_email">Continue With Other Email</string>
    <string name="direct_mutual_funds">Direct Mutual Funds</string>
    <string name="etfs">ETFs</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="eg_me_yahoo_com">Eg:me@yahoo.com</string>
    <string name="next">NEXT</string>
    <string name="enter">Enter</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="_8_30_characters">8–30 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_otp_send_to_this_email_id">Enter OTP send to this email ID</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_email_id">Verify EMAIL ID</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number_is_required_to_invest_in_india">Mobile number is required to invest in India</string>
    <string name="_91">+91   </string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to  </string>
    <string name="_918830466523">  +918830466523</string>
    <string name="otp">OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_pan">Verify PAN</string>
    <string name="pan_is_compulsory_for_investing_in_india">PAN is compulsory for investing in India</string>
    <string name="enter_your_pan_number_here">Enter your PAN number here</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_invested_somewhere">Already invested somewhere?</string>
    <string name="merge_analyse_and_switch_to_direct_funds">Merge, analyse and switch to Direct Funds</string>
    <string name="import_your_funds">IMPORT YOUR FUNDS</string>
    <string name="i_don_t_have_investment_elsewhere">I don\'t have investment elsewhere</string>
    <string name="popular_funds">Popular Funds</string>
    <string name="collections">Collections</string>
    <string name="quick_access">Quick Access</string>
    <string name="all_mutual_funds">All Mutual Funds</string>
    <string name="filter_sort">FILTER-SORT</string>
    <string name="_3y_returns">3Y Returns</string>
    <string name="icici_prudential_technology">ICICI Prudential Technology</string>
    <string name="direct_plan_growth">Direct Plan Growth</string>
    <string name="nfo_live">NFO Live</string>
    <string name="invest_in_new_fund_offering">Invest in New Fund Offering</string>
    <string name="hi_aditya_ravindra_cheke">Hi, Aditya Ravindra Cheke</string>
    <string name="aditya_ravindra_cheke">Aditya Ravindra Cheke</string>
    <string name="adityacheke291_gmaiil_com">adityacheke291@gmaiil.com</string>
    <string name="logout">Logout</string>
    <string name="enter_groww_pin">Enter Groww PIN</string>
    <string name="holdings">Holdings</string>
    <string name="verify_holdings">Verify Holdings</string>
    <string name="adityacheke291_gmail_com">adityacheke291@gmail.com</string>
</resources>