<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BothSideEqualMargin"
    tools:context=".ui.mutualFunds.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_248"
            android:src="@drawable/ic_emptydash"/>

        <TextView
            style="@style/TextViewEnterMobileNumber"
            android:textSize="@dimen/sp_18"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_37"
            android:text="@string/already_invested_somewhere"/>

        <TextView
            style="@style/EditTextEmailAddress_Login"
            android:textColor="@color/light_black"
            android:layout_marginTop="@dimen/sp_12"
            android:textSize="@dimen/sp_14"
            android:layout_gravity="center_horizontal"
            android:text="@string/merge_analyse_and_switch_to_direct_funds"/>

        <Button
            android:id="@+id/btnSpSendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_next_enter"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="28dp"
            android:text="@string/import_your_funds"
            android:textColor="@color/white" />

        <TextView
            style="@style/TextViewEnterMobileNumber"
            android:textSize="@dimen/sp_14"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:text="@string/i_don_t_have_investment_elsewhere"/>
    </LinearLayout>

</FrameLayout>