<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BothSideEqualMargin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginSignup.login.EnterEmail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/epGrowLogoName"
            style="@style/GrowImageLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_102"
            android:src="@drawable/grow_logo_name"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/epEmailAddress"
            style="@style/EditTextEmailAddress_Login"
            android:layout_below="@+id/epGrowLogoName"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/etEEEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/epEmailAddress"
            android:background="@android:color/transparent"
            android:hint="@string/eg_me_yahoo_com"
            android:textColor="@color/light_black"
            android:textSize="@dimen/sp_14"
            tools:ignore="TextFields" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"
            android:layout_below="@+id/etEEEmailAddress"
            android:background="@color/green" />

        <TextView
            android:padding="15dp"
            android:gravity="center"
            android:id="@+id/btnEENext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_20"
            android:background="@drawable/rectangle_next_enter"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/next"
            android:textColor="@color/white" />

    </RelativeLayout>


</FrameLayout>